[gd_scene load_steps=14 format=3 uid="uid://2wh8a5wxvelj"]

[ext_resource type="Script" uid="uid://cje2t7tw6c455" path="res://Scenes/main.gd" id="1_21xkr"]
[ext_resource type="PackedScene" uid="uid://cm1qx0t7ylge0" path="res://Scenes/player.tscn" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://c7efy30gnv6jp" path="res://Models/Road1.glb" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://36ujke8ce11a" path="res://Models/Sidewalk.glb" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://35w71omb4ynq" path="res://Scenes/streetlight.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://blxu3sslyhfk3" path="res://Models/Bus.glb" id="5_21xkr"]
[ext_resource type="PackedScene" uid="uid://c7x0pkmy2qlb3" path="res://caseoh_big_version.glb" id="7_6bp64"]
[ext_resource type="AudioStream" uid="uid://d0cc3fe1qn57t" path="res://Models/vine-boom.mp3" id="7_344ge"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jjvhh"]
size = Vector3(13.9866, 1.74872, 1.06445)

[sub_resource type="BoxShape3D" id="BoxShape3D_kry3j"]
size = Vector3(1.11176, 0.606934, 2.0282)

[sub_resource type="Environment" id="Environment_jjvhh"]
background_mode = 2
background_energy_multiplier = 0.0
ambient_light_energy = 16.0
volumetric_fog_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_21xkr"]
size = Vector3(1.67285, 2.02734, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_6bp64"]

[node name="main" type="Node3D"]
script = ExtResource("1_21xkr")

[node name="Player" parent="." instance=ExtResource("1_jjgbg")]
transform = Transform3D(0.0334711, 0, 0.398597, 0, 0.4, 0, -0.398597, 0, 0.0334711, 8.95037, 0.623131, -2.90362)
collision_layer = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.64005, 3.93126, -0.749588)

[node name="eoad_p1" parent="." instance=ExtResource("2_bo1nx")]
transform = Transform3D(70.6574, 0, 0, 0, 1.06739, 0, 0, 0, 1.55471, 0.837425, 0.212412, 0.027216)

[node name="sidewalk-p1" parent="." instance=ExtResource("3_8gbba")]
transform = Transform3D(-4.37114e-08, 0, 7.3494, 0, 1, 0, -1, 0, -3.21252e-07, -1.17067, 0.208884, -2.79475)

[node name="streetlight1" parent="." instance=ExtResource("4_jjvhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.883911, 0, -0.605435)

[node name="Node3D" parent="." instance=ExtResource("4_jjvhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.61423, -1.78814e-07, -0.538791)

[node name="Node3D2" parent="." instance=ExtResource("4_jjvhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.31854, 0, -0.601709)

[node name="StaticBody3D3" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.95196, 1.02398, -0.356309)
shape = SubResource("BoxShape3D_jjvhh")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10.0164, 1.02398, -0.356309)
shape = SubResource("BoxShape3D_jjvhh")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.41065, 1.02398, -1.79004)
shape = SubResource("BoxShape3D_jjvhh")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.50155, 1.02398, -3.80407)
shape = SubResource("BoxShape3D_jjvhh")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.50155, 1.02398, 3.08164)
shape = SubResource("BoxShape3D_jjvhh")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.17664, 0.257738, 1.17173)

[node name="Bus" parent="StaticBody3D" instance=ExtResource("5_21xkr")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.314107, 0.0262549, 0.109802)
shape = SubResource("BoxShape3D_kry3j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jjvhh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, -0.975917, 0.218143, 0, -0.218143, -0.975917, 0.101391, 2.66078, -8.48639)

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.53623, 0.513672, -2.93374)
shape = SubResource("BoxShape3D_21xkr")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1174, 0.600728, 0.650626)
stream = ExtResource("7_344ge")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 285.0
offset_top = 402.0
offset_right = 732.0
offset_bottom = 477.0
scale = Vector2(1.24, 0.96)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.337
anchor_top = 10.762
anchor_right = 13.337
anchor_bottom = 10.762
offset_left = -190.48
offset_top = -28.48
offset_right = 256.52
offset_bottom = 46.52
grow_horizontal = 0
text = "That's weird, why is there just a random bus parked here?

I guess i should check it out."

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.337
anchor_top = 10.762
anchor_right = 13.337
anchor_bottom = 10.762
offset_left = -190.48
offset_top = -28.48
offset_right = 256.52
offset_bottom = 46.52
grow_horizontal = 0
text = "What the-"

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.337
anchor_top = 10.762
anchor_right = 13.337
anchor_bottom = 10.762
offset_left = -190.48
offset_top = -28.48
offset_right = 256.52
offset_bottom = 46.52
grow_horizontal = 0
text = "CaseOh: There can only be one of us, and that ain't gonna be you."

[node name="Label4" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.337
anchor_top = 10.762
anchor_right = 13.337
anchor_bottom = 10.762
offset_left = -190.48
offset_top = -28.48
offset_right = 256.52
offset_bottom = 46.52
grow_horizontal = 0
text = "CASEOH?? What are you talking about?"

[node name="Label5" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.337
anchor_top = 10.762
anchor_right = 13.337
anchor_bottom = 10.762
offset_left = -190.48
offset_top = -28.48
offset_right = 256.52
offset_bottom = 46.52
grow_horizontal = 0
text = "..."

[node name="continue" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 701.0
offset_top = 448.0
offset_right = 891.0
offset_bottom = 471.0
scale = Vector2(0.72301, 1.00984)
text = "To continue, press space"

[node name="Caseoh" parent="." instance=ExtResource("7_6bp64")]
transform = Transform3D(-0.629527, 0, -0.127234, 0, 0.318756, 0, 0.0688221, 0, -1.16383, -3.17844, 0.569788, 1.25332)
visible = false

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.13196, 0.403326, 0.494454)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
shape = SubResource("BoxShape3D_6bp64")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
